<resources>
    <string name="app_name">pomodoro</string>
<!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
<!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
    <string name="nav_header_title_no_user">尚未登錄</string>
<!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
<!--    <string name="nav_header_desc">Navigation header</string>-->
<!--    <string name="action_settings">Settings</string>-->

    <string name="login_fragment_label">登入</string>
    <string name="register_fragment_label">註冊</string>
    <string name="reset_password_fragment_label">重設密碼</string>
    <string name="menu_main">首頁</string>
    <string name="menu_home">任務管理</string>
    <string name="menu_backup">備份數據</string>
    <string name="menu_restore">還原數據</string>
<!--    <string name="menu_total">統計</string>-->
    <string name="menu_calender">日曆</string>
    <string name="menu_save_mission">已完成任務</string>
    <string name="menu_settings">設置</string>
<!--    <string name="menu_category">Category</string>-->
    <string name="home_not_finish_mission">今日待辦任務</string>
    <string name="home_finish_mission">今日完成任務</string>
<!--    <string name="count_list_time">預計時間</string>-->
    <string name="home_finish_time">今日已用時間</string>
    <string name="menu_expired_mission">過期任務</string>
<!--    <string name="menu_lock">解鎖高級版</string>-->

    <string name="mission_time">番茄時間</string>
    <string name="mission_break">短休息時間</string>
<!--    <string name="mission_long_break">長休息時間</string>-->
    <string name="mission_repeat">重複</string>
    <string name="mission_goal">番茄數</string>
    <string name="mission_finish_goal">已完成番茄數</string>
    <string name="mission_theme">主題</string>
    <string name="mission_sound">背景音</string>
    <string name="mission_vibrate">震動</string>
<!--    <string name="mission_sound_level">音量</string>-->
<!--    <string name="mission_notification">顯示通知</string>-->
    <string name="mission_operate_day">執行日</string>
    <string name="mission_keep_awake">保持亮屏</string>
    <string name="mission_name">任務名稱</string>
<!--    <string name="mission_delete">刪除</string>-->
<!--    <string name="mission_edit">編輯</string>-->

    <string name="minute">分鐘</string>
<!--    <string name="default_val">0</string>-->
    <string name="add_mission">新增蕃茄任務</string>
    <string name="edit_mission">編輯蕃茄任務</string>
    <string name="mission_timer">蕃茄時鐘</string>
    <string name="category_today">今天</string>
    <string name="category_coming">即將到來</string>

<!--    <string name="mission_break_timer">蕃茄休息時鐘</string>-->
<!--    <string name="timer_break">休息一下</string>-->
<!--    <string name="timer_format">%tm:%ts</string>-->
<!--    <string name="type_mission">MISSION</string>-->
<!--    <string name="type_break">BREAK</string>-->
    <string name="fragment_range_calender">range</string>

    <array name="repeat_array">
        <item>無</item>
        <item>每天</item>
        <item>自訂</item>
    </array>

    <string name="ok">確認</string>
    <string name="cancel">取消</string>

    <string name="range_choose">選擇範圍</string>
    <string name="range_start">開始日期</string>
    <string name="range_end">結束日期</string>
    <string name="range_commit">提交</string>
    <string name="range_month">月</string>
    <string name="range_day">日</string>

    <!--供Firebase第三方登入畫面模組使用-->
    <string name="facebook_application_id">1062609410926610</string>
    <!--供Facebook登入模組使用-->
    <string name="fb_login_protocol_scheme">fb1062609410926610</string>

    <string name="login">登錄</string>
    <string name="register">註冊帳號</string>
    <string name="logout">登出?</string>
    <string name="create_account">建立帳號</string>
    <string name="create_account_error">信箱或密碼為空！</string>
    <string name="create_account_email_tint">test123@gmail.com</string>
    <string name="create_account_password_tint">至少六位數密碼</string>
    <string name="forget_password">忘記密碼</string>
    <string name="email_title">電子信箱/帳號</string>
    <string name="password_title">密碼</string>
    <string name="back">返回</string>
    <string name="reset_password">重設密碼</string>
    <string name="reset_email_title">請輸入信箱地址,將會發送重設密碼的連結</string>
    <string name="reset_email_success">已經發送</string>

    <string name="notice_set_mission_title">請輸入任務名稱</string>
    <string name="notice_choose_operate_day">執行日大於重複區間</string>
    <string name="notice_clear_repeat_range">清除已設置的重複區間</string>
    <string name="notice_calender_no_mission_state">今日無任務完成紀錄</string>

    <string name="settings_music_title">音樂設置</string>
    <string name="settings_set_mission_background_ringtone">設置任務背景音</string>
    <string name="settings_set_mission_finished_ringtone">設置任務完成音</string>
    <string name="settings_mission_title">任務設置</string>
    <string name="settings_auto_start_mission">自動開始下個蕃茄任務</string>
    <string name="settings_auto_start_break">自動開始休息</string>
    <string name="settings_disable_break">禁用休息</string>
    <string name="settings_data_title">資料備份/還原設置</string>

    <array name="ringtone_list">
        <item>無</item>
        <item>Bell ding</item>
        <item>Clay chime thunk</item>
        <item>Clay chime thunk</item>
        <item>High Pitch Short Bell</item>
        <item>Timer Bell</item>
        <item>Toy Train Whistle</item>
        <item>Woodpecker Peck</item>
    </array>

<!--    <string-array name="ringtone_name">-->
<!--        <item></item>-->
<!--    </string-array>-->

    <string-array name="background_music_list">
        <item>無</item>
        <item>時鐘聲1</item>
        <item>時鐘聲2</item>
        <item>海岸聲1</item>
        <item>海岸聲2</item>
        <item>流水聲1</item>
        <item>流水聲2</item>
        <item>Dolphin Esque</item>
        <item>Frolic</item>
        <item>In 3</item>
        <item>Interplanetary Alignment</item>
        <item>Meeting Again</item>
        <item>Nebular Focus</item>
    </string-array>

    <string name="backup_message">備份數據將會覆蓋遠端數據 確定要執行嗎?</string>
    <string name="restore_message">還原數據將會覆蓋本地端數據 確定要執行嗎?</string>
    <string name="require_login">請先登入帳號</string>

    <string name="finish_mission">結束任務</string>
    <string name="check_finish_mission">確認結束任務？</string>
<!--    <string name="notification_title">蕃茄任務:</string>-->
    <string name="notification_break_message">休息一下吧!</string>
    <string name="notification_mission_message">執行蕃茄任務!</string>
    <string name="notification_finished_message">任務完成</string>
    <string name="dialog_set_title">請設置</string>
    <string name="calender_today">今日</string>
    <string name="calender_month">月</string>
    <string name="calender_day">日</string>

    <string name="email_malformed_exception">The email address is malformed</string>
    <string name="email_exist_exception">There already exists an account with the given email address</string>
    <string name="sign_in_email_exception">The user account corresponding to email does not exist or has been disabled</string>
    <string name="sign_in_password_exception">The password is wrong</string>

    <string name="invalid_user_exception">The user account you are trying to sign in to has been disabled.</string>
    <string name="invalid_credential_exception">The credential is malformed or has expired.</string>
    <string name="user_collision_exception">There already exists an account with the email address asserted by the credential.</string>

    <string name="slide_1_title">隨時管理您的任務</string>
    <string name="slide_1_desc">無論是今天或是安排未來的任務 都可以輕鬆建立</string>

    <string name="slide_2_title">隨時備分您的任務</string>
    <string name="slide_2_desc">只要登入帳號並透過即時雲端備份服務 再也不用擔心遺失任務資訊</string>

    <string name="slide_3_title">提供跨裝置還原任務資訊</string>
    <string name="slide_3_desc">只要登入帳號 即可以透過雲端跨來恢復任務資訊</string>

    <string name="slide_4_title">檢視您的任務狀態</string>
    <string name="slide_4_desc">透過日曆及過期任務 一覽無遺您的任務狀態</string>

<!--    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>-->
<!--    <string name="play_again">Play Again</string>-->

    <string name="next">下一頁</string>
    <string name="skip">略過</string>
    <string name="start">開始!</string>

    <string name="network_warning">請設置網路</string>
<!--    <string name="dummy_button">Dummy Button</string>-->
<!--    <string name="dummy_content">DUMMY\nCONTENT</string>-->
    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->

    <array name="tab_titles">
        <item>@string/menu_home</item>
        <item>@string/menu_calender</item>
        <item>@string/menu_expired_mission</item>
    </array>

    <string name="timer_continue">繼續</string>
    <string name="timer_start">開始</string>
    <string name="timer_stop">停止</string>
    <string name="timer_pause">暫停</string>

    <string name="premium_function">高級版功能</string>
    <string name="premium_description">請付費解鎖此功能</string>
<!--    <string name="debug_data_binding_warning">data binding warning</string>-->

    <!--empty state-->
    <string name="blog_title">科普番茄任務</string>
    <string name="empty_screen">目前沒有任何文章</string>
    <string name="please_retry">請重試</string>
    <string name="retry">重試</string>
    <string name="color_selector">請選擇顏色</string>
</resources>
