<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_cloud"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_cloud_upload_24px"
            android:title="@string/menu_backup" />
        <item
            android:id="@+id/nav_restore"
            android:icon="@drawable/ic_cloud_download_24px"
            android:title="@string/menu_restore" />
    </group>

    <group android:id="@+id/group_count"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_total"
            android:icon="@drawable/ic_assessment_24px"
            android:title="@string/menu_total" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/ic_calendar_today_24px"
            android:title="@string/menu_calender" />
        <item
            android:id="@+id/nav_save_mission"
            android:icon="@drawable/ic_save_24px"
            android:title="@string/menu_save_mission" />
    </group>


    <group android:id="@+id/group_settins"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24px"
            android:title="@string/menu_settings" />
    </group>
</menu>
