<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="settingsViewModel"
            type="com.yumin.pomodoro.ui.main.viewmodel.SettingsViewModel" />
        <variable
            name="settingsClickProxy"
            type="com.yumin.pomodoro.ui.view.SettingsFragment.ClickProxy" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_main_background">

        <LinearLayout
            android:id="@+id/music_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/mission_item_shape"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_set_mission_background_ringtone"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"/>

                <Spinner
                    android:id="@+id/mission_background_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:entries="@array/background_music_list"
                    android:onItemSelected="@{(parent,view,pos,id)->settingsClickProxy.onSelectMissionBackgroundRingtone(parent,view,pos,id)}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/settings_set_mission_finished_ringtone" />

                <Spinner
                    android:id="@+id/mission_finish_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:entries="@array/ringtone_list"
                    android:onItemSelected="@{(parent,view,pos,id)->settingsClickProxy.onSelectMissionFinishedRingtone(parent,view,pos,id)}"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/mission_item_shape"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/music_linearLayout">

            <Switch
                android:id="@+id/auto_start_mission_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="32dp"
                android:text="@string/settings_auto_start_mission"
                android:onCheckedChanged="@{(view,checked)->settingsClickProxy.onAutoStartNextMissionChanged(view,checked)}"/>

            <Switch
                android:id="@+id/auto_start_break_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingBottom="32dp"
                android:text="@string/settings_auto_start_break"
                android:onCheckedChanged="@{(view,checked)->settingsClickProxy.onAutoStartBreakChanged(view,checked)}"/>

            <Switch
                android:id="@+id/disable_break"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingBottom="32dp"
                android:text="@string/settings_disable_break"
                android:onCheckedChanged="@{(view,checked)->settingsClickProxy.onDisableBreakChanged(view,checked)}"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>